Fixed a layout bug. Thanks Leimi

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ code {
 	}
 }
 
-@media screen and ( min-height: 35em ) {
+@media screen and ( min-width: 80em ) and ( min-height: 35em ) {
 
 	body {
 		padding: 5.333em 3.999em;
